# uqtoolkitV3

./: .gitignore  CMakeLists.txt  README.md
PyUQTk/: __init__.py
PyUQTk/bcs/: bcs.i
PyUQTk/inference/: __init__.py  postproc.py
PyUQTk/mcmc/: mcmc.i
PyUQTk/multirun/: __init__.py  multirun.py
PyUQTk/pce/: pce.i
PyUQTk/plotting/: inout.py
PyUQTk/pytests/: CMakeLists.txt  PyHMCMCTest.py  PyMCMC2dTest.py  PyMCMCTest.py  PyModTest.py  PyPCE1dTest.py  PyPCE2dTest.py
PyUQTk/quad/: quad.i
PyUQTk/sens/: gsatest.py
PyUQTk/tools/: tools.i
PyUQTk/uqtkarray/: arrayext.i  uqtkarray.i
PyUQTk/utils/: __init__.py  crps.py  func.py  mindex_order.py  multiindex.py  regr.py
builddir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
builddir/PyUQTk/: CTestTestfile.cmake  Makefile  cmake_install.cmake  quad.py
builddir/PyUQTk/bcs/: CTestTestfile.cmake  Makefile  bcs.py  bcsPYTHON_wrap.cxx  bcsPYTHON_wrap.h  cmake_install.cmake
builddir/PyUQTk/inference/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mcmc.py
builddir/PyUQTk/multirun/: CTestTestfile.cmake  Makefile  cmake_install.cmake  srun.x
builddir/PyUQTk/pce/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pce.py  pcePYTHON_wrap.cxx  pcePYTHON_wrap.h
builddir/PyUQTk/plotting/: Makefile  (+4 more)
builddir/cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/dep/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
config/: config-gcc-Python.sh  config-gcc-base.sh  config-grover-intel.sh  config-teton.sh
cpp/app/: CMakeLists.txt
cpp/app/gen_mi/: gen_mi.cpp
cpp/app/generate_quad/: generate_quad.cpp
cpp/app/gkpSparse/: gkpSparse.cpp  gkpclib.cpp  gkpflib.f  gkplib.h
cpp/app/gp_regr/: gp_regr.cpp
cpp/app/model_inf/: model_inf.cpp
cpp/app/pce_eval/: pce_eval.cpp
cpp/app/pce_quad/: pce_quad.cpp
cpp/app/pce_resp/: pce_resp.cpp
cpp/app/pce_rv/: pce_rv.cpp
cpp/app/pce_sens/: pce_sens.cpp
cpp/app/pdf_cl/: pdf_cl.cpp
cpp/app/regression/: regression.cpp
cpp/app/sens/: sens.cpp  trdSpls.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/array/: Array2D.h  arrayio.cpp  arraytools.cpp  arraytools.h
cpp/lib/bcs/: bcs.cpp
cpp/lib/dfi/: dfi.cpp  dfi.h
cpp/lib/gproc/: gproc.cpp
cpp/lib/include/: error_handlers.h  ftndefs.h  gen_defs.h
cpp/lib/infer/: inference.cpp  inference.h  mrv.cpp  post.cpp
cpp/lib/kle/: kle.cpp  kle.h
cpp/lib/lreg/: lreg.cpp
cpp/lib/mcmc/: mcmc.cpp
cpp/lib/pce/: PCBasis.cpp  PCSet.cpp  PCSet.h
cpp/lib/quad/: quad.cpp  quad.h
cpp/lib/tools/: combin.cpp  combin.h  func.cpp  func.h  gq.cpp  minmax.cpp  minmax.h  multiindex.cpp  multiindex.h  pcmaps.cpp  pcmaps.h  probability.cpp  probability.h  rosenblatt.cpp  tools.h  toolsf.f
cpp/lib/xmlutils/: Object.h  RefPtr.h  XMLAttributeList.cpp  XMLElement.cpp  XMLElement.h  XMLExpatParser.cpp  XMLExpatParser.h  XMLParser.cpp  XMLUtils.cpp  XMLUtils.h
dep/dsfmt/: dsfmt_add.c
doc/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
doc/PyUQTk/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/dep/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/: CMakeLists.txt
examples/custom_mcmc/: Makefile  custom_inf.cpp  custom_sam.cpp
examples/kle_ex1/: kl_1D.cpp  kl_2D.cpp  kl_2Du.cpp  kl_utils.cpp  kl_utils.h  mkplots.py  pl2Dsgrid.py  pl2Dugrid.py  pyutils.py  run1D.sh
examples/kle_ex1/data/: kl-prep-scus.py
examples/line_infer/: XMLreader.h  posterior.h
examples/num_integ/: sparse_quad.py
examples/ops/: LogComp.cpp  Utils.h  plot_logs.py  plot_pdf.py
examples/sensMC/: genRndSpls.sh  rmspls.sh
examples/surf_rxn/: CMakeLists.txt  SurfRxnDet.cpp  SurfRxnISP.cpp  SurfRxnNISP.cpp  Utils.h  file_utils.py  forUQ_BB_sr.py  postpred.py  utils.py
examples/uqpc/: CMakeLists.txt  model.py  plot_prep.py
examples/window/: fwd_prop_tools.py  highd_sparse.py
(+940 files in other folders)
