add_subdirectory (gen_mi)
add_subdirectory (generate_quad)
if ("${INTEL-GROVER}" STREQUAL "")
 add_subdirectory (model_inf)
endif()
add_subdirectory (pce_eval)
add_subdirectory (pce_quad)
add_subdirectory (pce_resp)
add_subdirectory (pce_rv)
add_subdirectory (pce_sens)
add_subdirectory (pdf_cl)
add_subdirectory (sens)
add_subdirectory (regression)
add_subdirectory (gp_regr)
add_subdirectory (gkpSparse)
