project (UQTk) 

enable_language(Fortran)

add_subdirectory (array   )
add_subdirectory (tools   )
add_subdirectory (quad    )
add_subdirectory (pce     )
add_subdirectory (kle     )
add_subdirectory (bcs     )
add_subdirectory (mcmc    )
add_subdirectory (xmlutils)
add_subdirectory (lreg    )
add_subdirectory (gproc   )
if ("${INTEL-GROVER}" STREQUAL "")
 add_subdirectory (infer   )	
endif()
add_subdirectory (include )

if ("${DFI}" STREQUAL "ON")
	add_subdirectory (dfi)
endif()

include_directories (include)  
include_directories (array)
include_directories (tools)
include_directories (quad)
include_directories (pce)
include_directories (bcs)
include_directories (lreg)
include_directories (gproc)
include_directories (mcmc)
if ("${INTEL-GROVER}" STREQUAL "")
  include_directories (infer)
endif()

include_directories (../../dep/slatec)
include_directories (../../dep/lapack)
include_directories (../../dep/blas)
include_directories (../../dep/dsfmt)
include_directories (../../dep/lbfgs )
include_directories (../../dep/ann )
include_directories (../../dep/figtree )
include_directories (../../dep/cvode-2.7.0/include)
include_directories("${PROJECT_BINARY_DIR}/../../dep/cvode-2.7.0/include")

FILE(GLOB arraysrc "array/*.cpp")
FILE(GLOB toolssrc "tools/*.cpp" "tools/*.f")
FILE(GLOB quadsrc "quad/*.cpp")
FILE(GLOB pcesrc "pce/*.cpp")
FILE(GLOB klesrc "kle/*.cpp")
FILE(GLOB bcssrc "bcs/*.cpp")
FILE(GLOB mcmcsrc "mcmc/*.cpp")
FILE(GLOB lregsrc "lreg/*.cpp")
FILE(GLOB gprocsrc "gproc/*.cpp")
FILE(GLOB xmlutilssrc "xmlutils/*.cpp")
if ("${INTEL-GROVER}" STREQUAL "")
  FILE(GLOB infersrc "infer/*.cpp")
endif()

add_library(uqtk ${arraysrc} ${toolssrc} ${quadsrc} ${pcesrc} ${klesrc} ${bcssrc} ${mcmcsrc} ${lregsrc} ${gprocsrc} ${xmlutilssrc} ${infersrc})
INSTALL(TARGETS uqtk DESTINATION lib)
